kanesa-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kanesa
spec:
  rules:
    - host: kanesa.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
  ingressClassName: nginx
