todo-kanesa-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-kanesa-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    cert-manager.io/issuer: 'letsencrypt-kanesa-issuer'
spec:
  tls:
    - hosts:
        - todo.kanesa.xyz
      secretName: kanesa-certificate-secret
  rules:
    - host: todo.kanesa.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
  ingressClassName: nginx
